# Teste-Python-CLI-Seu-Nome.

./: README.md  pyproject.toml
mathquiz/: cli.py  core.py  operations.py
mathquiz: mathquiz/: operations.py
tests/: test_core.py
